--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   "rules": {
     "react/react-in-jsx-scope": "off",
     "import/no-extraneous-dependencies": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "object-curly-newline": "off"
   }
 }
