--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,6 @@
     "import/no-extraneous-dependencies": "off",
     "import/prefer-default-export": "off",
     "object-curly-newline": "off",
-    "react/jsx-no-bind": "off",
+    "react/jsx-no-bind": "off"
   }
 }
